Made streamlit application and wrote train and inference scripts

--- a/notebooks/ddpm_from_scratch.ipynb
+++ b/notebooks/ddpm_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "985bf4eb",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "from torchvision.datasets import MNIST, FashionMNIST\n",
     "from torch.utils.data import Dataset,DataLoader\n",
     "from torchvision import transforms\n",
+    "from torchvision.utils import save_image\n",
     "import torch.nn as nn\n",
     "\n",
     "import numpy as np\n",
@@ -658,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "3fe07e7f",
    "metadata": {},
    "outputs": [
@@ -718,7 +719,32 @@
     "        optimizer.step()\n",
     "        ema.update(diffusion_model_1)\n",
     "        total_loss_of_epoch+=loss.item()\n",
+    "    if epoch % 10 == 0:\n",
+    "        torch.save(diffusion_model_1.state_dict(), f\"checkpoint_epoch_{epoch}.pt\")\n",
+    "    if (epoch + 1) % 5 == 0:\n",
+    "        diffusion_model_1.eval()\n",
     "    \n",
+    "        # Swapping model weights with EMA weights\n",
+    "        ema.apply_shadow(diffusion_model_1)\n",
+    "    \n",
+    "        with torch.no_grad():\n",
+    "            samples = diffusion_model_1.generate_output(\n",
+    "                shape=(16, 1, 28, 28),\n",
+    "                device=device\n",
+    "            )\n",
+    "    \n",
+    "            samples = (samples + 1) / 2\n",
+    "            samples = samples.clamp(0, 1)\n",
+    "    \n",
+    "        save_path = f\"samples/epoch_{epoch+1}.png\"\n",
+    "        save_image(samples, save_path, nrow=4)\n",
+    "        print(f\"Saved sample grid → {save_path}\")\n",
+    "    \n",
+    "        # Restore training weights\n",
+    "        ema.restore(diffusion_model_1)\n",
+    "    \n",
+    "        diffusion_model_1.train()\n",
+    "\n",
     "    avg_loss=total_loss_of_epoch/len(train_loader)\n",
     "    print(f\"Epoch : {epoch}/{EPOCHS} -- Loss : {avg_loss:.4f}\")\n",
     "    losses.append(avg_loss)"
